--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -6,6 +6,7 @@
       "passwordLabel": "Password",
       "forgotPassword": "Forgot your password?",
       "loginButton": "Login",
+      "logging": "Logging in...",
       "continueWith": "Or continue with",
       "noAccount": "Don't have an account?",
       "signUp": "Sign up",
