404页面国际化

--- a/frontend/public/locales/zh/translation.json
+++ b/frontend/public/locales/zh/translation.json
@@ -46,6 +46,11 @@
       "verifying": "验证身份中...",
       "loading": "加载中...",
       "loginSuccess": "登录成功，正在跳转..."
+    },
+    "notFound": {
+      "title": "页面未找到",
+      "description": "抱歉，我们无法找到您正在寻找的页面。它可能已被移动或删除。",
+      "backHome": "返回首页"
     }
   }
   
