--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -46,6 +46,11 @@
       "verifying": "Verifying identity...",
       "loading": "Loading...",
       "loginSuccess": "Login successful, redirecting..."
+    },
+    "notFound": {
+      "title": "Page Not Found",
+      "description": "Sorry, we couldn't find the page you're looking for. It may have been moved or deleted.",
+      "backHome": "Back to Home"
     }
   }
   
