--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,51 +1,58 @@
 {
-    "loginForm": {
-      "title": "Welcome back",
-      "description": "Login to your VectorDB Tools account",
-      "emailLabel": "Email",
-      "passwordLabel": "Password",
-      "forgotPassword": "Forgot your password?",
-      "loginButton": "Login",
-      "logging": "Logging in...",
-      "continueWith": "Or continue with",
-      "noAccount": "Don't have an account?",
-      "signUp": "Sign up",
-      "termsPrefix": "By clicking continue, you agree to our ",
-      "termsOfService": "Terms of Service",
-      "termsAnd": " and ",
-      "privacyPolicy": "Privacy Policy",
-      "loginWithApple": "Login with Apple",
-      "loginWithGoogle": "Login with Google",
-      "loginWithMeta": "Login with Meta"
+  "loginForm": {
+    "title": "Welcome back",
+    "description": "Login to your VectorDB Tools account",
+    "emailLabel": "Email",
+    "passwordLabel": "Password",
+    "forgotPassword": "Forgot your password?",
+    "loginButton": "Login",
+    "logging": "Logging in...",
+    "continueWith": "Or continue with",
+    "noAccount": "Don't have an account?",
+    "signUp": "Sign up",
+    "termsPrefix": "By clicking continue, you agree to our ",
+    "termsOfService": "Terms of Service",
+    "termsAnd": " and ",
+    "privacyPolicy": "Privacy Policy",
+    "loginWithApple": "Login with Apple",
+    "loginWithGoogle": "Login with Google",
+    "loginWithMeta": "Login with Meta"
+  },
+  "signupForm": {
+    "title": "Create an account",
+    "description": "Sign up for your VectorDB Tools account",
+    "fullNameLabel": "Full Name",
+    "fullNamePlaceholder": "Enter your full name",
+    "emailLabel": "Email",
+    "passwordLabel": "Password",
+    "passwordHint": "Choose a secure password",
+    "signUpButton": "Sign up",
+    "signingUp": "Signing up...",
+    "continueWith": "Or continue with",
+    "haveAccount": "Already have an account?",
+    "login": "Login",
+    "termsPrefix": "By clicking sign up, you agree to our ",
+    "termsOfService": "Terms of Service",
+    "termsAnd": " and ",
+    "privacyPolicy": "Privacy Policy",
+    "signUpWithApple": "Sign up with Apple",
+    "signUpWithGoogle": "Sign up with Google",
+    "signUpWithMeta": "Sign up with Meta",
+    "successTitle": "Registration Successful!",
+    "successDescription": "Your account has been created and is pending admin approval. We'll review your application soon.",
+    "backToLogin": "Back to Login"
     },
-    "signupForm": {
-      "title": "Create an account",
-      "description": "Sign up for your VectorDB Tools account",
-      "fullNameLabel": "Full Name",
-      "fullNamePlaceholder": "Enter your full name",
-      "emailLabel": "Email",
-      "passwordLabel": "Password",
-      "passwordHint": "Choose a secure password",
-      "signUpButton": "Sign up",
-      "signingUp": "Signing up...",
-      "continueWith": "Or continue with",
-      "haveAccount": "Already have an account?",
-      "login": "Login",
-      "termsPrefix": "By clicking sign up, you agree to our ",
-      "termsOfService": "Terms of Service",
-      "termsAnd": " and ",
-      "privacyPolicy": "Privacy Policy",
-      "signUpWithApple": "Sign up with Apple",
-      "signUpWithGoogle": "Sign up with Google",
-      "signUpWithMeta": "Sign up with Meta",
-      "successTitle": "Registration Successful!",
-      "successDescription": "Your account has been created and is pending admin approval. We'll review your application soon.",
-      "backToLogin": "Back to Login"
+    "errors": {
+      "loginFailed": "Login failed, please check your email and password",
+      "registerFailed": "Registration failed, please check your input",
+      "networkError": "Network error, please try again later",
+      "inactiveUser": "Account is inactive, please contact administrator",
+      "emailExists": "Email already registered"
     },
     "notFound": {
-      "title": "Page Not Found",
-      "description": "Sorry, we couldn't find the page you're looking for. It may have been moved or deleted.",
-      "backHome": "Back to Home"
-    }
+    "title": "Page Not Found",
+    "description": "Sorry, we couldn't find the page you're looking for. It may have been moved or deleted.",
+    "backHome": "Back to Home"
   }
+}
   
